# spin-componentize

./: .gitmodules  Cargo.toml  README.md  build.rs  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.wasm
.github/workflows/: main.yml
abi-conformance/: Cargo.toml
abi-conformance/src/: lib.rs  test_config.rs  test_http.rs  test_inbound_http.rs  test_inbound_redis.rs  test_key_value.rs  test_llm.rs  test_mysql.rs  test_postgres.rs  test_redis.rs  test_wasi.rs
adapter-test/: Cargo.toml  build.rs
adapter-test-case/: Cargo.toml  spin.toml
adapter-test-case/src/: lib.rs
adapter-test/src/: lib.rs
adapter/host/: Cargo.toml
adapter/src/: lib.rs  spin.rs
adapters/: README.md  wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm  wasi_snapshot_preview1.spin.wasm
adapters/7513464/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
adapters/c4eafed/: wasi_snapshot_preview1.command.wasm  wasi_snapshot_preview1.reactor.wasm
componentize/: Cargo.toml  build.rs
componentize/src/: convert.rs  lib.rs
go-case/: main.go
rust-case/: Cargo.toml
rust-case/src/: lib.rs
rust-command/: Cargo.toml
src/: convert.rs  lib.rs  macros.rs
test/: Cargo.toml  build.rs
test-case/: Cargo.toml
test-case/src/: lib.rs
test/src/: lib.rs
tests/: README.md
tests/case-helper/: Cargo.toml
tests/case-helper/src/: lib.rs
tests/rust-case-0.12/: Cargo.toml
tests/rust-case-0.12/src/: lib.rs
tests/rust-case-0.2/: Cargo.toml
tests/rust-case-0.2/src/: lib.rs
tests/rust-case-0.7/: Cargo.toml
tests/rust-case-0.7/src/: lib.rs
tests/rust-case-0.8/: Cargo.toml
tests/rust-case-0.8/src/: lib.rs
wit/: README.md  spin.wit
