[package]
name = "spin-componentize"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
wasmparser = "0.113.3"
wasm-encoder = "0.33.0"
wit-component = "0.14.6"
wit-parser = "0.12"

[dev-dependencies]
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "c796ce7376a57a40605f03e74bd78cefcc9acf3a", features = [
    "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "c796ce7376a57a40605f03e74bd78cefcc9acf3a" }
tokio = { version = "1.32.0", features = ["macros", "rt", "fs"] }
spin-abi-conformance = { path = "abi-conformance" }
