[package]
name = "spin-componentize"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
wasmparser = "0.200.0"
wasm-encoder = "0.200.0"
wit-component = "0.200.0"
wit-parser = "0.200.0"

[dev-dependencies]
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
tokio = { workspace = true }
spin-abi-conformance = { path = "abi-conformance" }

[workspace]
members = [
    "abi-conformance",
    "tests/rust-case-0.2",
    "tests/rust-case-0.8",
    "tests/rust-command",
]

[workspace.dependencies]
anyhow = "1.0.80"
wasmtime = { version = "18.0.1", features = ["component-model"] }
wasmtime-wasi = { version = "18.0.1" }
tokio = { version = "1.36.0", features = ["macros", "rt", "fs"] }
