[package]
name = "spin-abi-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "4c34504efb258a0c51c6a5f3f8a5b24d987993b9", features = [
    "component-model",
] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "4c34504efb258a0c51c6a5f3f8a5b24d987993b9", features = [
    "tokio",
] }
cap-std = "2.0.0"
tokio = { version = "1.32.0", features = [
    "macros",
    "rt",
    "fs",
    "rt-multi-thread",
] }
clap = { version = "3.1.15", features = ["derive", "env"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.5.9"
serde_json = "1.0"
