[package]
name = "spin-abi-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.66"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
cap-std = "2.0.0"
tokio = { workspace = true }
clap = { version = "3.1.15", features = ["derive", "env"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
serde = { version = "1.0.188", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.5.9"
serde_json = "1.0"
