[package]
name = "spin-abi-conformance"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.77"
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
cap-std = "2.0.1"
tokio = { workspace = true }
clap = { version = "4.5.1", features = ["derive", "env"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.0"
toml = "0.8.10"
serde_json = "1.0"
