[package]
name = "adapter-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
anyhow = "1.0.69"
wit-component = { path = "../../wasm-tools/crates/wit-component" }#{ git = "https://github.com/dicej/wasm-tools", branch = "cabi-post" }
async-trait = "0.1.66"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "8d3a881b524d56498dfc71b65818b2abbeb1da44", features = ["component-model"] }
tokio = { version = "1", features = ["macros", "rt", "fs"] }
host = { path = "../adapter/host" }
wasi-common = { path = "../adapter/wasi-common" }
wasi-cap-std-sync = { path = "../adapter/wasi-common/cap-std-sync" }
